meja/tests/wrong_labelled_arg.stderr
File "tests/wrong_labelled_arg.meja", line 3, characters 27-31:
Error: Incompatible types a:_ -> _ and b:_ -> _:
       Cannot unify a:_ -> _ and b:_ -> _
